--- a/YTFrontend.html
+++ b/YTFrontend.html
@@ -3,60 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy-First YouTube Player</title>
-  <link rel="icon" href="favicon.ico">
+  <title>LibreWatch Player</title>
   <style>
-    body { font-family: sans-serif; background: #111; color: #eee; padding: 2rem; }
-    .player-container { margin-bottom: 2rem; }
-    iframe { display: block; margin-top: 1rem; }
-    button { margin-right: 1rem; padding: 0.5rem 1rem; cursor: pointer; }
+    body { font-family: sans-serif; margin: 20px; background: #121212; color: #fff; }
+    #playerContainer { max-width: 560px; margin: 20px auto; }
+    input, button { padding: 8px 12px; margin: 5px 0; width: 100%; box-sizing: border-box; }
+    button { cursor: pointer; background: #ff4444; border: none; color: #fff; border-radius: 6px; }
   </style>
 </head>
 <body>
-
-  <h1>Privacy-First YouTube Players</h1>
-
-  <div class="player-container">
-    <label for="video1">Video 1 ID:</label>
-    <input type="text" id="video1" value="dQw4w9WgXcQ">
-    <button data-target="player1">Load Player 1</button>
-    <div id="player1"></div>
+  <h1>LibreWatch Player</h1>
+  <div>
+    <input type="text" id="videoIdInput" placeholder="Enter YouTube Video ID" />
+    <button id="loadBtn">Load Video</button>
   </div>
-
-  <div class="player-container">
-    <label for="video2">Video 2 ID:</label>
-    <input type="text" id="video2" value="9bZkp7q19f0">
-    <button data-target="player2">Load Player 2</button>
-    <div id="player2"></div>
-  </div>
+  <div id="playerContainer"></div>
 
   <script type="module">
-    import { createYouTubePlayer, removeYouTubePlayer, getSponsorSegments } from './youtubePlayer.js';
+    import { createYouTubePlayer } from './youtubePlayer.js';
 
-    const config = {
-      videoAPI: 'https://piped.kavin.rocks/',
-      sponsorBlock: 'https://sponsor.ajay.app'
-    };
+    const btn = document.getElementById('loadBtn');
+    const input = document.getElementById('videoIdInput');
+    const containerId = 'playerContainer';
 
-    // Attach buttons dynamically
-    document.querySelectorAll('button[data-target]').forEach(btn => {
-      btn.addEventListener('click', async () => {
-        const targetId = btn.dataset.target;
-        const inputId = targetId === 'player1' ? 'video1' : 'video2';
-        const videoId = document.getElementById(inputId).value.trim();
-        if (!videoId) return alert('Enter a valid video ID');
-
-        // Remove existing player if exists
-        removeYouTubePlayer(targetId);
-
-        // Create player
-        const { iframe, segments } = await createYouTubePlayer(targetId, videoId, { width: 640, height: 360, autoplay: true });
-
-        console.log(`[YouTubePlayer] Loaded ${videoId} in ${targetId}`);
-        console.log('[YouTubePlayer] SponsorBlock segments:', segments);
-      });
+    btn.addEventListener('click', async () => {
+      const videoId = input.value.trim();
+      if (!videoId) return alert('Enter a valid YouTube video ID');
+      await createYouTubePlayer(containerId, videoId, { autoplay: true });
     });
   </script>
-
 </body>
 </html>
