--- a/YTFrontend.html
+++ b/YTFrontend.html
@@ -20,7 +20,7 @@
   <div id="playerContainer"></div>
 
   <script type="module">
-    import { createYouTubePlayer } from './youtubePlayer.js';
+    import { createYouTubePlayer } from './Player/youtubePlayer.js';
 
     const btn = document.getElementById('loadBtn');
     const input = document.getElementById('videoIdInput');
